[package]
name = "rustre"
version = "0.1.0"
edition = "2021"
description = "A parallel, distributed file system inspired by Lustre, implemented in Rust"

[[bin]]
name = "rustre"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
futures = "0.3"
anyhow = "1"
rocksdb = "0.24"
foundationdb = { version = "0.10", features = ["embedded-fdb-include", "fdb-7_1"] }
