[package]
name = "rustre"
version = "0.1.0"
edition = "2021"
description = "A parallel, distributed file system inspired by Lustre, implemented in Rust"

[[bin]]
name = "rustre"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
thiserror = "1"
futures = "0.3"
anyhow = "1"
rocksdb = "0.24"
foundationdb = { version = "0.10", features = ["embedded-fdb-include", "fdb-7_1"] }
rand = "0.8"
chrono = "*"
libc = "0.2"
nix = { version = "0.28", features = ["fs", "socket"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_IO"] }

[profile.release]
# Optimize for size (alternative: "z" for minimal size, "s" for small)
opt-level = "z"
# Enable link time optimization for better code elimination
lto = true
# Single codegen unit for better optimization
codegen-units = 1
# Strip debug symbols to reduce binary size
strip = true
# Use panic = "abort" to avoid panic unwinding overhead
panic = "abort"
# Disable incremental compilation for release builds
incremental = false

[profile.dev]
# Keep dev builds fast
opt-level = 0
debug = true
